--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     header {
       background-color: var(--header-bg);
       color: var(--header-text);
-      padding: 1rem 1rem;
+      padding: 1rem;
       text-align: center;
       position: relative;
     }
@@ -56,9 +56,6 @@
       position: absolute;
       right: 1rem;
       top: 1rem;
-      display: flex;
-      align-items: center;
-      gap: 0.5rem;
     }
 
     .toggle-switch {
@@ -133,19 +130,21 @@
       text-transform: uppercase;
     }
 
-    input[type="text"]:focus {
-      outline: none;
-      border-color: var(--accent);
-      box-shadow: 0 0 5px var(--accent);
+    #stateSuggestion {
+      margin-top: 1rem;
+      font-size: 1rem;
+      font-weight: bold;
+      color: var(--accent);
+      cursor: pointer;
     }
 
     #result ul {
       display: grid;
-      grid-template-columns: repeat(2, 1fr);
+      grid-template-columns: 1fr 1fr;
       gap: 1rem;
       padding: 0;
       list-style: none;
-      margin-top: 1.5rem;
+      margin-top: 1rem;
     }
 
     #result li {
@@ -171,10 +170,8 @@
       border-radius: 10px;
       padding: 1rem;
       box-sizing: border-box;
-      font-size: 0.95rem;
       display: flex;
       flex-direction: column;
-      max-height: 100%;
     }
 
     #recentSearches h3 {
@@ -254,6 +251,7 @@
   <main>
     <div id="leftPanel">
       <input type="text" id="regoInput" placeholder="e.g. AXH950 or AXH950 V" />
+      <div id="stateSuggestion"></div>
       <div id="result"></div>
     </div>
     <aside id="recentSearches">
@@ -267,24 +265,32 @@
       VIC: "https://www.vicroads.vic.gov.au/registration/buy-sell-or-transfer-a-vehicle/check-vehicle-registration/vehicle-registration-enquiry",
       NSW: "https://check-registration.service.nsw.gov.au/?isLoginRequired=true",
       QLD: "https://www.service.transport.qld.gov.au/checkrego/application/VehicleSearch.xhtml?dswid=-124",
-      SA: "https://account.ezyreg.sa.gov.au/account/check-registration.htm#error=login_required&state=f766405e-5748-4874-84dd-25721daa5b10",
+      SA: "https://account.ezyreg.sa.gov.au/account/check-registration.htm#error=login_required",
       WA: "https://online.transport.wa.gov.au/webExternal/registration/",
       TAS: "https://www.transport.tas.gov.au/MRSWebInterface/public/regoLookup/registrationLookup.xhtml",
       ACT: "https://rego.act.gov.au/regosoawicket/public/reg/FindRegistrationPage",
       NT: "https://nt.gov.au/driving/rego/existing-nt-registration/rego-check"
     };
 
-    const letterToState = {
-      V: "VIC", N: "NSW", Q: "QLD", S: "SA",
-      W: "WA", T: "TAS", A: "ACT", X: "NT"
-    };
-
     const input = document.getElementById("regoInput");
     const result = document.getElementById("result");
     const recentList = document.getElementById("recentList");
+    const suggestion = document.getElementById("stateSuggestion");
     const themeToggle = document.getElementById("themeToggle");
 
     let recentRegos = [];
+
+    const detectState = (rego) => {
+      if (/^[A-Z]{3}[0-9]{3}$/.test(rego)) return 'VIC';
+      if (/^Y[A-Z0-9]{5}$/.test(rego)) return 'ACT';
+      if (/^[A-Z]{2}[0-9]{2}[A-Z]{2}$/.test(rego)) return 'NSW';
+      if (/^[A-Z]{3}[0-9]{2}$/.test(rego)) return 'QLD';
+      if (/^[A-Z]{1}[0-9]{3}[A-Z]{2}$/.test(rego)) return 'SA';
+      if (/^[A-Z]{1,2}[0-9]{5}$/.test(rego)) return 'WA';
+      if (/^[A-E][A-Z0-9]{5}$/.test(rego)) return 'TAS';
+      if (/^C[AB][0-9]{4}$/.test(rego)) return 'NT';
+      return null;
+    };
 
     function addRecentRego(rego) {
       rego = rego.toUpperCase();
@@ -304,14 +310,7 @@
         const btn = document.createElement("button");
         btn.className = "copyBtn";
         btn.title = `Copy ${rego}`;
-        btn.innerHTML = `
-          <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor"
-            stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-            class="feather feather-copy" viewBox="0 0 24 24">
-            <rect x="9" y="9" width="13" height="13" rx="2" ry="2"></rect>
-            <path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"></path>
-          </svg> Copy`;
-
+        btn.innerHTML = `<svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-copy" viewBox="0 0 24 24"><rect x="9" y="9" width="13" height="13" rx="2" ry="2"></rect><path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"></path></svg> Copy`;
         btn.onclick = () => {
           navigator.clipboard.writeText(rego);
           btn.innerHTML = "Copied!";
@@ -326,7 +325,7 @@
     function buildStateList(rego) {
       let html = "<ul>";
       Object.entries(stateLinks).forEach(([state, url]) => {
-        html += `<li onclick="window.open('${url}', '_blank'); addRecentRego('${rego}'); input.value=''; result.innerHTML='';">${state}</li>`;
+        html += `<li onclick="window.open('${url}', '_blank'); addRecentRego('${rego}'); input.value=''; result.innerHTML=''; suggestion.innerHTML='';">${state}</li>`;
       });
       html += "</ul>";
       result.innerHTML = html;
@@ -334,28 +333,36 @@
 
     input.addEventListener("input", () => {
       let val = input.value.trim().toUpperCase();
-      let parts = val.split(" ");
-      let rego = parts[0];
-      let code = parts[1] ? parts[1].toUpperCase() : "";
+      let [rego, suffix] = val.split(" ");
 
       if (!rego || rego.length < 2) {
         result.innerHTML = "";
+        suggestion.innerHTML = "";
         return;
       }
 
       navigator.clipboard.writeText(rego);
 
-      if (letterToState[code]) {
-        window.open(stateLinks[letterToState[code]], "_blank");
+      if (suffix && stateLinks[suffix]) {
+        window.open(stateLinks[suffix], "_blank");
         addRecentRego(rego);
         input.value = "";
         result.innerHTML = "";
-      } else {
-        buildStateList(rego);
+        suggestion.innerHTML = "";
+        return;
       }
+
+      const guess = detectState(rego);
+      if (guess) {
+        suggestion.innerHTML = `Looks like this is from <strong>${guess}</strong> — <span style="text-decoration:underline; cursor:pointer;" onclick="window.open(stateLinks['${guess}'], '_blank'); addRecentRego('${rego}'); input.value=''; result.innerHTML=''; suggestion.innerHTML='';">click to open</span>`;
+      } else {
+        suggestion.innerHTML = "";
+      }
+
+      buildStateList(rego);
     });
 
-    // Theme management
+    // Theme preference
     function setTheme(mode) {
       document.documentElement.setAttribute("data-theme", mode);
       localStorage.setItem("theme", mode);
@@ -366,7 +373,6 @@
       setTheme(themeToggle.checked ? "dark" : "light");
     });
 
-    // On load, set theme based on system or saved
     const savedTheme = localStorage.getItem("theme");
     if (savedTheme) {
       setTheme(savedTheme);
